--- a/src/app/pages/home/components/products-header/products-header.component.html
+++ b/src/app/pages/home/components/products-header/products-header.component.html
@@ -3,11 +3,25 @@
     <div>
       <button mat-button [matMenuTriggerFor]="sortByMenu">
         Sort by {{ sort }}
+        <mat-icon>expand_more</mat-icon>
       </button>
       <mat-menu #sortByMenu="matMenu">
         <button (click)="onSortUpdated('desc')" mat-menu-item>desc</button>
         <button (click)="onSortUpdated('asc')" mat-menu-item>asc</button>
       </mat-menu>
+    </div>
+    <div class="flex items-center">
+      <div>
+        <button mat-button [matMenuTriggerFor]="menu">
+          Show {{ itemsShowCount }}
+          <mat-icon>expand_more</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="onItemsUpdated(12)">12</button>
+          <button mat-menu-item (click)="onItemsUpdated(24)">24</button>
+          <button mat-menu-item (click)="onItemsUpdated(36)">36</button>
+        </mat-menu>
+      </div>
     </div>
   </div>
 </mat-card>
