--- a/src/app/pages/home/components/products-header/products-header.component.html
+++ b/src/app/pages/home/components/products-header/products-header.component.html
@@ -22,6 +22,15 @@
           <button mat-menu-item (click)="onItemsUpdated(36)">36</button>
         </mat-menu>
       </div>
+      <button (click)="onColumnsUpdated(1)">
+        <mat-icon>view_list</mat-icon>
+      </button>
+      <button (click)="onColumnsUpdated(3)">
+        <mat-icon>view_module</mat-icon>
+      </button>
+      <button (click)="onColumnsUpdated(4)">
+        <mat-icon>view_comfy</mat-icon>
+      </button>
     </div>
   </div>
 </mat-card>
