--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,10 @@
       (columnsCountChange)="onColumnsCountChange($event)"
     ></app-products-header>
     <mat-grid-list gutterSize="16" [cols]="cols" [rowHeight]="rowHeight">
-      <mat-grid-tile> <app-product-box></app-product-box> </mat-grid-tile>
+      <mat-grid-tile>
+        <app-product-box class="w-full" [fullWidthMode]="cols === 1">
+        </app-product-box>
+      </mat-grid-tile>
     </mat-grid-list>
   </mat-drawer-content>
 </mat-drawer-container>
