--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,65 +1,80 @@
 <mat-card *ngIf="cart.items.length" class="max-w-7xl mx-auto">
-  <table mat-table [dataSource]="dataSource" class="mat-elevetaion-z8 w-full">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-full">
     <ng-container matColumnDef="product">
       <th mat-header-cell *matHeaderCellDef>Product</th>
       <td mat-cell *matCellDef="let element">
         <img src="{{ element.product }}" alt="product" class="w-[100px] my-5" />
       </td>
-      <td mat-footer-cell *matFooterCellDe>
-        <button mat-raised-button routerLink="home">Continue shopping</button>
+      <td mat-footer-cell *matFooterCellDef>
+        <button mat-raised-button routerLink="/home">Continue Shopping</button>
       </td>
     </ng-container>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let element">
-        <span class="truncate max-w-xs block">{{ element.name }}</span>
+        <p class="truncate max-w-xs">{{ element.name }}</p>
       </td>
-      <td mat-footer-cell *matFooterCellDe></td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.price | currency : "EUR" }}
-      </td>
-      <td mat-footer-cell *matFooterCellDe></td>
+      <td mat-cell *matCellDef="let element">{{ element.price | currency }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="quantity">
       <th mat-header-cell *matHeaderCellDef>Quantity</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onRemoveQuantity(element)">
           <mat-icon>remove</mat-icon>
         </button>
         <span>{{ element.quantity }}</span>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onAddQuantity(element)">
           <mat-icon>add</mat-icon>
         </button>
       </td>
-      <td mat-footer-cell *matFooterCellDe></td>
+      <td mat-footer-cell *matFooterCellDef></td>
     </ng-container>
     <ng-container matColumnDef="total">
       <th mat-header-cell *matHeaderCellDef>Total</th>
       <td mat-cell *matCellDef="let element">
-        {{ element.quantity * element.price | currency : "EUR" }}
+        {{ element.quantity * element.price | currency }}
       </td>
-      <td mat-footer-cell *matFooterCellDe>
-        <span class="font-bold py-5 block">
-          {{ getTotal(cart.items) | currency : "EUR" }}
-        </span>
+      <td mat-footer-cell *matFooterCellDef>
+        <span class="font-bold py-5 block">{{
+          getTotal(cart.items) | currency
+        }}</span>
       </td>
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>
-        <button mat-raised-button color="warn" class="float-right">
+        <button
+          (click)="onClearCart()"
+          mat-raised-button
+          color="warn"
+          class="float-right"
+        >
           Clear All
         </button>
       </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="warn" class="float-right">
+        <button
+          (click)="onRemoveFromCart(element)"
+          mat-mini-fab
+          color="warn"
+          class="float-right"
+        >
           <mat-icon>close</mat-icon>
         </button>
       </td>
-      <td mat-footer-cell *matFooterCellDe>
-        <button mat-raised-button color="primary">Proceed to Checkout</button>
+      <td mat-footer-cell *matFooterCellDef>
+        <button
+          (click)="onCheckout()"
+          mat-raised-button
+          color="primary"
+          class="float-right"
+        >
+          Proceed To Checkout
+        </button>
       </td>
     </ng-container>
 
@@ -68,9 +83,9 @@
     <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
   </table>
 </mat-card>
-<mat-card *ngIf="!cart.items.length" class="max-w-7xl mx-auto">
+<mat-card *ngIf="!cart.items.length" class="mx-auto my-3 max-w-7xl">
   <p>
     Your cart is empty.
-    <button mat-raised-button routerLink="home">Start shopping</button>
+    <button mat-raised-button routerLink="/home">Start Shopping</button>
   </p>
 </mat-card>
